# jira-context-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/jira_context_mcp/: __main__.py  adf.py  config.py  context.py  jira.py  markdown.py  models.py  server.py  tree.py
tests/: conftest.py  test_adf.py  test_checklist.py  test_context.py  test_jira.py  test_markdown.py  test_models.py  test_server.py  test_tree.py
tests/fixtures/expected/: 3level_with_sections.md  issue_tree_3level.md
