[project]
name = "jira-context-mcp"
version = "0.1.0"
description = "Read-only MCP server that pulls rich Jira ticket context (parent hierarchy, siblings, Smart Checklist) into LLMs as structured markdown."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Piotr Dudziński", email = "pe.dudzinski@gmail.com" },
]
keywords = ["mcp", "jira", "atlassian", "llm", "claude", "fastmcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/pdudzinsky/jira-context-mcp"
Repository = "https://github.com/pdudzinsky/jira-context-mcp"
Issues = "https://github.com/pdudzinsky/jira-context-mcp/issues"
Changelog = "https://github.com/pdudzinsky/jira-context-mcp/blob/main/CHANGELOG.md"

[project.scripts]
jira-context-mcp = "jira_context_mcp.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_context_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["error"]

[tool.coverage.run]
source = ["src/jira_context_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "T20",   # flake8-print (no print() outside __main__)
    "ERA",   # eradicate (commented-out code)
    "BLE",   # flake8-blind-except
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["src/jira_context_mcp"]
